project2/test/test_11710204_4.spl
int test_11710204_4(int x, int y)
{
  return x + y;
}
int test_11710204_4(int x, int y)
{
  return x - y;
}
